[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epicsdev_tektronix"
version = "2.0.1"
authors = [
  { name="Andrey Sukhanov", email="sukhanov@bnl.gov" },
]
description = "EPICS PVAccess server for Tektronix MSO oscilloscopes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "p4p>=4.2.2", "epicsdev>=3.0.1"
]
[project.urls]
"Homepage" = "https://github.com/ASukhanov/epicsdev_tektronix"
"Bug Tracker" = "https://github.com/ASukhanov/epicsdev_tektronix"
