[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epicsdev_tektronix"
version = "2.0.1"
authors = [
  { name="Andrey Sukhanov", email="sukhanov@bnl.gov" },
]
description = "EPICS PVAccess server for Tektronix MSO oscilloscopes"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.20.0",
  "pyvisa>=1.11.0",
  "pyvisa-py>=0.5.0",
  "p4p>=4.2.2",
  "epicsdev>=3.0.1",
  "psutil>=5.9",
]
[project.optional-dependencies]
gui = [
  "pypeto>=1.3.2",
  "pvplot>=1.6.4",
  "PyQt5>=5.15",
  "pyqtgraph>=0.13",
]
[project.urls]
"Homepage" = "https://github.com/ASukhanov/epicsdev_tektronix"
"Bug Tracker" = "https://github.com/ASukhanov/epicsdev_tektronix"
